7/11/13 remove jquery shim from config.js
7/11/13 make MSymbols return an object literal
7/11/13 change double quotes (") to single quotes (') throughout
6/27/13 update copyright
6/24/13 add credits
6/21/13 center Reset All button under concentration display, account for i18n of combo box
6/21/13 increase the height of items in the Solute combo box, to improve tablet usability
6/21/13 reformat code
6/21/13 provide prototype properties via inherit() instead of attaching to Type.prototype
# 0.0.0-5 6/21/13
6/21/13 delete unused mvt
6/21/13 adjust layout so that play area content is vertically centered
6/21/13 switch to SVG renderer to improve text quality (molarity#1)
6/21/13 fix max value on ConcentrationDisplay
6/21/13 limit scale to 1 in ConcentrationDisplay, to prevent negative rectangle height
6/20/13 add multi-line text to sliders and concentration display
6/19/13 expand height of touch area for slider thumbs
6/19/13 upgrade from require 2.1.4 to 2.1.6
6/19/13 upgrade from jquery 1.9.1 to 2.0.2
6/19/13 upgrade from lodash 1.2.1 to 1.3.1
6/18/13 add 'allowTouchSnag: true' to drag handlers for slider thumbs
# 0.0.0-4 6/11/13
6/7/13 migrate FillHighlighter to scenery-phet from molarity and beers-law-lab
6/7/13 change order of args to dot.Util.linear
6/7/13 upgrade from lodash-1.0.0-rc3 to lodash-1.2.1, fixes Chrome "source URL declaration is deprecated" warning
6/7/13 replace imagesloaded jquery plugin with PxLoader, integrate SimLauncher
6/5/13 remove redundant first arg from FillHighlighter constructor, node can be obtained via event.currentTarget
6/5/13 use PropertySet.multilink in BeakerLabelNode
6/4/13 integrate scenery.ButtonListener with molarity.CheckBox
6/4/13 convert to PropertySetB and DerivedProperty
6/4/13 fix "Molarity" tab name
6/3/13 delete backbone from lib/, delete FORT from config.js
6/3/13 delete css for scrollbars that was addressed in joist#6
6/3/13 use Property.link/unlink instead of addObserver/removeObserver