@@ -17,10 +17,10 @@ define( function( require ) {
   var Color = require( 'SCENERY/util/Color' );
   var Image = require( 'SCENERY/nodes/Image' );
   var inherit = require( 'PHET_CORE/inherit' );
-  var MFont = require( 'molarity/MFont' );
   var MStrings = require( 'molarity/MStrings' );
   var Node = require( 'SCENERY/nodes/Node' );
   var Path = require( 'SCENERY/nodes/Path' );
+  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Shape = require( 'KITE/Shape' );
   var StringUtils = require( 'PHETCOMMON/util/StringUtils' );
@@ -34,7 +34,7 @@ define( function( require ) {
   var MINOR_TICK_SPACING = 0.1; // L
   var MINOR_TICKS_PER_MAJOR_TICK = 5;
   var MAJOR_TICK_LABELS = [ '\u00bd', '1' ]; // 1/2L, 1L
-  var TICK_LABEL_FONT = new MFont( 20 );
+  var TICK_LABEL_FONT = new PhetFont( 20 );
   var TICK_LABEL_COLOR = Color.DARK_GRAY;
   var TICK_LABEL_X_SPACING = 8;
 
