@@ -12,9 +12,9 @@ define( function( require ) {
   var assert = require( 'ASSERT/assert' )( 'beers-law-lab' );
   var ComboBox = require( 'SUN/ComboBox' );
   var inherit = require( 'PHET_CORE/inherit' );
-  var MFont = require( 'molarity/MFont' );
   var MStrings = require( 'molarity/MStrings' );
   var Node = require( 'SCENERY/nodes/Node' );
+  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var StringUtils = require( 'PHETCOMMON/util/StringUtils' );
   var Text = require( 'SCENERY/nodes/Text' );
@@ -27,7 +27,7 @@ define( function( require ) {
   function SoluteComboBox( solutes, selectedSoluteProperty ) {
 
     // 'Solute' label
-    var labelNode = new Text( StringUtils.format( MStrings.pattern_0label, MStrings.solute ), { font: new MFont( 22 ) } );
+    var labelNode = new Text( StringUtils.format( MStrings.pattern_0label, MStrings.solute ), { font: new PhetFont( 22 ) } );
 
     // items
     var items = [];
@@ -54,7 +54,7 @@ define( function( require ) {
 
     var node = new Node();
     var colorNode = new Rectangle( 0, 0, 20, 20, { fill: solute.maxColor, stroke: solute.maxColor.darkerColor() } );
-    var textNode = new Text( solute.name, { font: new MFont( 20 ) } );
+    var textNode = new Text( solute.name, { font: new PhetFont( 20 ) } );
     node.addChild( colorNode );
     node.addChild( textNode );
     textNode.left = colorNode.right + 5;
