@@ -1,3 +1,4 @@
+7/17/13 replace MFont with PhetFont
 7/11/13 remove jquery shim from config.js
 7/11/13 make MSymbols return an object literal
 7/11/13 change double quotes (") to single quotes (') throughout
